Add appearance, the filter remains

--- a/src/app/modules/publication/publication-card/publication-card.component.html
+++ b/src/app/modules/publication/publication-card/publication-card.component.html
@@ -1,1 +1,38 @@
-<p>publication-card works!</p>
+<div class="container">
+  <div class="back" (click)="back()">
+    <mat-icon class="back__icon">arrow_back</mat-icon>
+    <span class="back__span">Вернуться</span>
+  </div>
+  <span class="title">Catalysis Center Publications</span>
+  <div class="card">
+    <div class="card__info">
+      <span class="card__info__key">Название</span>
+      <span class="card__info__value">какое то название</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Авторы</span>
+      <span class="card__info__value">Авторы</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Журнал</span>
+      <span class="card__info__value">название журнала</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Кол-во страниц</span>
+      <span class="card__info__value">234</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Год издания</span>
+      <span class="card__info__value">2019</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Издатель</span>
+      <span class="card__info__value">Какое то имя или журнала</span>
+    </div>
+    <div class="card__info">
+      <span class="card__info__key">Теги</span>
+      <span class="card__info__value">тег 1, тег 2</span>
+    </div>
+  </div>
+
+</div>
