--- a/src/app/container/full-layout/full-layout/full-layout.component.html
+++ b/src/app/container/full-layout/full-layout/full-layout.component.html
@@ -1,5 +1,3 @@
-<div class="app-body h-100">
-  <main id="main">
-    <router-outlet></router-outlet>
-  </main>
+<div class="app-body">
+  <router-outlet></router-outlet>
 </div>
