--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$test-app-primary: mat.define-palette(mat.$indigo-palette);
+$test-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$test-app-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$test-app-theme: mat.define-light-theme((
+  color: (
+    primary: $test-app-primary,
+    accent: $test-app-accent,
+    warn: $test-app-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($test-app-theme);
+
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 100;
+  src: local("Roboto"),
+  url("assets/fonts/Roboto.woff") format("woff2"),
+  url("assets/fonts/Roboto.woff") format("woff");
+}
+
+.title {
+  margin-left: 63px;
+  margin-top: 52px;
+  position: absolute;
+  font: 28px Roboto;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
