--- a/src/app/modules/shared/filter/filter.component.html
+++ b/src/app/modules/shared/filter/filter.component.html
@@ -4,13 +4,12 @@
 
     <mat-form-field class="filter__form__field">
       <mat-label class="filter__form__field__label">Название</mat-label>
-      <input matInput class="filter__form__field__input">
-      <mat-placeholder class="filter__form__field__placeholder">Название</mat-placeholder>
+      <input matInput class="filter__form__field__input" placeholder="Название">
     </mat-form-field>
 
     <mat-form-field class="filter__form__field">
       <mat-label class="filter__form__field__label">Журнал</mat-label>
-      <mat-select [formControl]="journals" multiple>
+      <mat-select [formControl]="journals" multiple placeholder="Журнал">
         <mat-select-trigger>
           <span *ngIf="(journals.value?.length || 0) == 1" class="filter__form__field__placeholder">
             {{ journals.value?.[0] || '' }}
@@ -21,7 +20,6 @@
         </mat-select-trigger>
         <mat-option *ngFor="let journal of journalList" [value]="journal">{{ journal }}</mat-option>
       </mat-select>
-      <mat-placeholder class="filter__form__field__placeholder">Журнал</mat-placeholder>
     </mat-form-field>
 
     <div class="filter__form__radio">
