--- a/src/app/modules/publication/publication-list/publication-list.component.html
+++ b/src/app/modules/publication/publication-list/publication-list.component.html
@@ -1,21 +1,21 @@
 <div class="container">
   <span class="title">Catalysis Center Publications</span>
   <mat-list class="list">
-    <mat-list-item class="list__item">
+    <mat-list-item class="list__item" *ngFor="let publication of publicationPage[page - 1]?.publications">
       <div class="list__item__header">
-        <span class="list__item__header__text">GO Ms Sheif</span>
-        <mat-icon class="list__item__header__icon" [routerLink]="['/publication', '5']">
+        <span class="list__item__header__text">{{ publication.title }}</span>
+        <mat-icon class="list__item__header__icon" (click)="getItem(publication.pubId)">
           arrow_forward
         </mat-icon>
       </div>
       <div class="list__item__line">
         <div class="list__item__line__info">
           <span class="list__item__line__info__key">Журнал</span>
-          <span class="list__item__line__info__value">Barge</span>
+          <span class="list__item__line__info__value">{{ publication?.journal || '-' }}</span>
         </div>
         <div class="list__item__line__info">
           <span class="list__item__line__info__key">Издатель</span>
-          <span class="list__item__line__info__value">Port Canaveral</span>
+          <span class="list__item__line__info__value">{{ publication?.publisher || '-' }}</span>
         </div>
       </div>
       <mat-divider class="list__item__divider"></mat-divider>
@@ -23,9 +23,18 @@
 
   </mat-list>
   <div class="pagination">
-    <mat-icon class="pagination__arrow">chevron_left</mat-icon>
-    <span class="pagination__page">3</span>
-    <mat-icon class="pagination__arrow">chevron_right</mat-icon>
+    <button mat-icon-button (click)="previousPage()" [disabled]="page === 0 || page === 1"
+      [class.pagination__arrow__active]="!(page === 0 || page === 1)"
+      [class.pagination__arrow__disabled]="page === 0 || page === 1">
+      <mat-icon>chevron_left</mat-icon>
+    </button>
+    <span class="pagination__page">{{ page === 0 ? 1 : page }}</span>
+    <button mat-icon-button class="pagination__arrow" (click)="nextPage(publicationPage[page - 1].pages.endCursor)"
+      [disabled]="disableNextButton"
+      [class.pagination__arrow__active]="!disableNextButton"
+      [class.pagination__arrow__disabled]="disableNextButton">
+      <mat-icon>chevron_right</mat-icon>
+    </button>
   </div>
   <app-filter></app-filter>
 </div>
