Fix save state list objects

--- a/src/app/modules/shared/filter/filter.component.html
+++ b/src/app/modules/shared/filter/filter.component.html
@@ -19,7 +19,7 @@
             Выбраны {{ journals.value?.length }}
           </span>
         </mat-select-trigger>
-        <mat-option *ngFor="let journal of journalList" [value]="journal">{{ journal }}</mat-option>
+        <mat-option (click)="setJournals()" *ngFor="let journal of journalList" [value]="journal">{{ journal }}</mat-option>
       </mat-select>
     </mat-form-field>
 
