Finish commit. Fix state list. Fix  displayed

--- a/src/app/modules/publication/publication-card/publication-card.component.html
+++ b/src/app/modules/publication/publication-card/publication-card.component.html
@@ -3,7 +3,9 @@
     <mat-icon class="back__icon">arrow_back</mat-icon>
     <span class="back__span">Вернуться</span>
   </div>
-  <span class="title">{{ publication?.title }}</span>
+  <div class="title">
+    <span>{{ publication?.title }}</span>
+  </div>
   <div class="card">
     <div class="card__info">
       <span class="card__info__key">Журнал</span>
