--- a/src/app/modules/publication/publication-card/publication-card.component.scss
+++ b/src/app/modules/publication/publication-card/publication-card.component.scss
@@ -30,12 +30,12 @@
   .title {
     margin-left: 64px;
     margin-top: 86px;
-    max-width: 800px;
+    width: 800px;
   }
 
   .card {
     margin-left: 64px;
-    margin-top: 172px;
+    margin-top: 250px;
     width: 800px;
     height: 200px;
     display: grid;
